try to fix overflow #2

--- a/landlingpage.css
+++ b/landlingpage.css
@@ -4,7 +4,7 @@ body{
 
 #Boxes{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     width: auto;
     max-width: 100%;
 }
